inlämning av prov

--- a/fråga1.html
+++ b/fråga1.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Fråga 1</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Här ska din HTML kod vara -->
 
-
-
-
     <script>
-        // Här ska din JavaScript kod vara
+      const height = 24;
+      const width = 18;
 
-
+      let omkrets = 2 * height + 2 * width;
+      console.log("omkrets:", omkrets);
     </script>
-</body>
-
+  </body>
 </html>
