--- a/fråga4.html
+++ b/fråga4.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Fråga 4</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Här ska din HTML kod vara -->
 
-
     <script>
-        // Här ska din JavaScript kod vara
-
-
+      // Här ska din JavaScript kod vara
+      myNumber = prompt("Enter a number");
+      if (myNumber > 5 && myNumber < 10) {
+        console.log("Talet är mellan 5 och 10");
+      } else {
+        console.log("Talet är inte mellan 5 och 10");
+      }
     </script>
-</body>
-
+  </body>
 </html>
