--- a/fråga3.html
+++ b/fråga3.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Fråga 3</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Här ska din HTML kod vara -->
 
-
-
     <script>
-        // Här ska din JavaScript kod vara
-
-
+      // Här ska din JavaScript kod vara
+      const names = ["kalle", "pelle", "nalle"];
+      console.log(names[1]);
     </script>
-</body>
-
+  </body>
 </html>
