--- a/fråga5.html
+++ b/fråga5.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Fråga 5</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Här ska din HTML kod vara -->
 
-
-
     <script>
-        // Här ska din JavaScript kod vara
-
-
+      // Här ska din JavaScript kod vara
+      for (i = 0; i <= 20; i++) {
+        console.log(i);
+      }
     </script>
-</body>
-
+  </body>
 </html>
