--- a/fråga6.html
+++ b/fråga6.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Fråga 6</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Här ska din HTML kod vara -->
 
-
-
     <script>
-        // Här ska din JavaScript kod vara
+      // Här ska din JavaScript kod vara
+      const politiker = [
+        { id: 1, firstName: "Stefan", lastName: "Löven" },
+        { id: 2, firstName: "Annie", lastName: "Lööv" },
+        { id: 3, firstName: "Nyamko", lastName: "Sabuni" },
+        { id: 4, firstName: "Jimmie", lastName: "Åkesson" },
+        { id: 5, firstName: "Per", lastName: "Bolund" },
+      ];
 
-
+      politiker.forEach((element) => {
+        console.log(element["firstName"], "-", element["lastName"]);
+      });
     </script>
-</body>
-
+  </body>
 </html>
