--- a/fråga7.html
+++ b/fråga7.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Fråga 7</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Här ska din HTML kod vara -->
 
     <script>
-        // Här ska din JavaScript kod vara
+      // Här ska din JavaScript kod vara
+      function area(x, y) {
+        return x * y;
+      }
+      function volume(x, y, z) {
+        return x * y * z;
+      }
 
-
+      console.log(area(7, 3));
+      console.log(area(8, 9));
+      console.log(volume(6, 4, 2));
+      console.log(volume(4, 2, 1));
     </script>
-</body>
-
+  </body>
 </html>
