--- a/fråga8.html
+++ b/fråga8.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Fråga 8</title>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <!-- Här ska din HTML kod vara -->
 
     <script>
-        // Här ska din JavaScript kod vara
+      // Här ska din JavaScript kod vara
+      let numbers = [12, 25, 37, 43, 59, 61];
 
+      function filterEvenNumbers(array) {
+        return array.filter((index) => {
+          return index % 2 === 0;
+        });
+      }
 
+      console.log(filterEvenNumbers(numbers));
     </script>
-</body>
-
+  </body>
 </html>
