--- a/fråga9.html
+++ b/fråga9.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Fråga 9</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Här ska din HTML kod vara -->
-
+    <input type="text" id="address" />
+    <button onclick="showImage()">Show Image</button>
+    <img src="" alt="" id="bild" />
     <script>
-        // Här ska din JavaScript kod vara
-
-
+      // Här ska din JavaScript kod vara
+      function showImage(address) {
+        inputElement = document.getElementById("address");
+        ImageElement = document.getElementById("bild");
+        ImageElement.src = inputElement.value;
+      }
     </script>
-</body>
-
+  </body>
 </html>
